git commit -m"final"

--- a/index.html
+++ b/index.html
@@ -1,13 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event diary by Samanta</title>
+    <link rel="stylesheet" href="index.css" />
+    <!-- fontawesome cdn -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
+    <!-- swiper cdn css -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+  </head>
+  <body>
+    <!-- header section -->
+    <header class="header" id="header">
+      <!-- navbar -->
+      <a href="#" class="logo"><span>E</span>vent diary</a>
+
+      <nav class="navbar" id="navbar">
+        <a href="#home">Home</a>
+        <a href="#service">Service</a>
+        <a href="#about">About us</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#price">Price</a>
+        <a href="#review">Reviews</a>
+        <a href="#contact">Contact us</a>
+      </nav>
+      <!-- menubar -->
+      <div id="menu-bar" class="fa-solid fa-bars"></div>
+    </header>
+    <!-- main section -->
+    <main class="main" id="main">
+      <!-- home section of navbar -->
+      <section class="home">
+        <div class="content">
+          <h3>
+            Fairy tale landed here <br />
+            <span>Event diary by Samanta</span>
+          </h3>
+          <a href="#" class="btn">get quote</a>
+        </div>
+        <div class="swiper-container home-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="images/gallery1.jpg" alt="cover-venue2" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/gallery10.jpg" alt="cover-venue3" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/gallery12.jpg" alt="cover-venue4" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/gallery13.jpg" alt="cover-venue5" />
+            </div>
+            <div class="swiper-slide">
+              <img src="images/gallery14.jpg" alt="cover-venue6" />
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+      <!-- service -->
+      <section class="service" id="service">
+        <h1 class="heading">Our <span>services</span></h1>
+        <div class="box-container">
+          <div class="box">
+            <div class="fa-solid fa-hand-holding-heart">
+              <h3>Wedding ceremonies</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fas fa-photo-video">
+              <h3>photography and videography</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fas fa-music">
+              <h3>cultural festivals</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fas fa-car">
+              <h3>vehicles arrangement</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fa-solid fa-users-line">
+              <h3>Get together</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fas fa-map-marker-alt">
+              <h3>venue selection</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic,
+                delectus!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- about section -->
+      <section class="about" id="about">
+        <h1 class="heading">About <span>Us</span></h1>
+        <div class="row">
+          <div class="image">
+            <img src="images/about.png" alt="banner" />
+          </div>
+          <div class="content">
+            <h3>Your occasion deserves a fairy tale landing</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo at
+              nam distinctio. Quos, nihil ea.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo at
+              nam distinctio. Quos, nihil ea.
+            </p>
+            <a href="#contact">Reach us</a>
+          </div>
+        </div>
+      </section>
+      <!-- gallery section -->
+      <section class="gallery" id="gallery">
+        <h1 class="heading">Our <span>gallery</span></h1>
+        <div class="box-container">
+          <div class="box">
+            <img src="images/gallery11.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/gallery2.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa- heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/gallery3.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa- heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/gallery4.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/gallery5.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa- heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/gallery7.jpg" alt="pic" />
+            <h3 class="title">Best events</h3>
+            <div class="icons">
+              <a href="#" class="fas fa- heart"></a>
+              <a href="#" class="fas fa-share"></a>
+              <a href="#" class="fas fa-eye"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--section price  -->
+      <section class="price" id="price">
+        <h3 class="heading">Our <span>Price Range</span></h3>
+        <div class="box-container">
+          <div class="box">
+            <h3 class="title">Basic</h3>
+            <h3 class="amount">20000 <span>BDT</span></h3>
+            <ul>
+              <li><i class="fas fa-check"></i>Full package</li>
+              <li><i class="fas fa-check"></i>Decor</li>
+              <li><i class="fas fa-check"></i>Music and Photo</li>
+              <li><i class="fas fa-check"></i>Food court</li>
+            </ul>
+            <a href="#" class="btn">Check out</a>
+          </div>
+          <div class="box">
+            <h3 class="title">Golden</h3>
+            <h3 class="amount">40000 <span>BDT</span></h3>
+            <ul>
+              <li><i class="fas fa-check"></i>Full package</li>
+              <li><i class="fas fa-check"></i>Decor</li>
+              <li><i class="fas fa-check"></i>Music and Photo</li>
+              <li><i class="fas fa-check"></i>Food court</li>
+            </ul>
+            <a href="#" class="btn">Check out</a>
+          </div>
+          <div class="box">
+            <h3 class="title">Platinum</h3>
+            <h3 class="amount">60000 <span>BDT</span></h3>
+            <ul>
+              <li><i class="fas fa-check"></i>Full package</li>
+              <li><i class="fas fa-check"></i>Decor</li>
+              <li><i class="fas fa-check"></i>Music and Photo</li>
+              <li><i class="fas fa-check"></i>Food court</li>
+            </ul>
+            <a href="#" class="btn">Check out</a>
+          </div>
+        </div>
+      </section>
+      <section class="review" id="review">
+        <h1 class="heading">Client's <span>Reviews</span></h1>
+        <div class="swiper-container review-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide box">
+              <i class="fas fa-quote-right"></i>
+              <div class="user">
+                <img src="images/gallery6.jpg" alt="" />
+                <div class="user-info">
+                  <h3>Diya</h3>
+                  <span>Happy customer</span>
+                </div>
+              </div>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, expedita.</p>
+            </div>
+            <div class="swiper-slide box">
+              <i class="fas fa-quote-right"></i>
+              <div class="user">
+                <img src="images/gallery8.jpg" alt="" />
+                <div class="user-info">
+                  <h3>Pranto</h3>
+                  <span>Happy customer</span>
+                </div>
+              </div>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, expedita.</p>
+            </div>
+            <div class="swiper-slide box">
+              <i class="fas fa-quote-right"></i>
+              <div class="user">
+                <img src="images/gallery9.jpg" alt="" />
+                <div class="user-info">
+                  <h3>Anabia</h3>
+                  <span>Happy customer</span>
+                </div>
+              </div>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, expedita.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- contact section -->
+
+    <section class="contact" id="contact">
+<h1 class="heading">Contact <span>Us</span></h1>
+<form action="#">
+  <div class="inputBox">
+    <input type="text" placeholder="Name:"/>
+    <input type="email" placeholder="E-mail:"/>
+  </div>
+  <div class="inputBox">
+    <input type="tel" placeholder="Phone:"/>
+    <input type="text" placeholder="context:"/>
+  </div>
+  <textarea name="" id="" cols="30" rows="10" placeholder="message:"></textarea>
+  <input type="submit" value="Send message" class="btn">
+</form>
+      <section/>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer" id="footer">
+              <div class="box-container">
+          <div class="box">
+            <h3>Branches</h3>
+            <a href="#"><i class="fas fa-map-marker-alt"></i>Dhaka</a>
+            <a href="#"><i class="fas fa-map-marker-alt"></i>Khulna</a>
+            <a href="#"><i class="fas fa-map-marker-alt"></i>Rajshahi</a>
+          </div>
+          <div class="box">
+            <h3>Social Links</h3>
+         <a href="#"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
+         <a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
+         <a href="#"><i class="fa-brands fa-linkedin"></i>Linked In</a>
+           </div>
+         
+           <div class="box">
+            <h3>contact info</h3>
+            <a href="#"><i class="fas fa-phone"></i>+123456</a>
+            <a href="#"><i class="fas fa-phone"></i>+9893879</a>
+            <a href="#"><i class="fas fa-envelope"></i>abc@gmail.com</a>
+            <a href="#"><i class="fas fa-envelope"></i>jdkh@gmail.com</a>
+           </div>
+           <div class="box">
+            <h3>Quick Links</h3>
+            <a href="#home"><i class="fas fa-arrow-right"></i> Home</a>
+            <a href="#service"><i class="fas fa-arrow-right"></i>Service</a>
+            <a href="#about"><i class="fas fa-arrow-right"></i>About us</a>
+            <a href="#gallery"><i class="fas fa-arrow-right"></i>Gallery</a>
+           </div>
+        </div>  
+        <div class="courtesy">
+          all rights reserved <span>Samanta</span>&copy;copyright 2024
+             </div>   
+    </footer>
+    <!-- swiper cdn js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
